# trioexplorer

./: .gitignore  README.md
.agent/: TODO.md  prompt.md
.claude/: claude.md  settings.local.json
.claude/skills/trioexplorer/: SKILL.md
cli/: FILTERS.md  README.md  pyproject.toml  requirements.txt
cli/tests/: __init__.py  conftest.py  test_history.py  test_list.py  test_output.py  test_search.py
cli/trioexplorer/: __init__.py  auth.py  client.py  config.py  main.py  output.py
cli/trioexplorer/commands/: __init__.py  history.py  list.py  search.py  stats.py
docs/: index.html  openapi.json
notebooks/: NOTEBOOK_PLAN.md  getting_started.ipynb
